# foundations_ai

./: .gitignore  CLAUDE.md  DEPLOY.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  tailwind.config.ts
backend/: .env.example  Dockerfile  Procfile  README.md  nixpacks.toml  pyproject.toml
backend/app/: audit.py  config.py  cost.py  db.py  llm.py  main.py
backend/app/agent/: auto_propose_view.py  generate_chart.py  generate_presentation.py  generate_report.py  join_tools.py  memory_tools.py  plan.py  propose_skill.py  propose_view.py  run.py  search_tools.py  sql_guard.py  system_prompt.py  tools.py  wiki_tools.py
backend/app/catalog/: joins.py  memories.py  messages.py  projects.py  queries.py  search.py  skills.py  wiki.py
backend/app/routes/: admin.py  catalog.py  chat.py  connections.py  conversations.py  converse.py  decisions.py  insights.py  llm.py  media.py  memories.py  projects.py  proposals.py  setup.py  situation_room.py  skills.py  sme.py  wiki.py
backend/app/workers/: embed.py  embed_backfill.py  insights_worker.py  loop1.py  loop2.py  loop3.py  loop4_seed_views.py  markdown.py  rules.py  scheduler.py  source_pg.py  summarize_conversation.py
backend/app/workers/wiki/: code.py  docs.py  domain_index.py  domains.py  runner.py  tables.py
frontend/: Dockerfile  Procfile  entrypoint.sh  index.html  nixpacks.toml  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
scripts/: check-skill.ts  demo-reset.ts  loop4-trial.ts
seed/: run.ts
setup/: README.md  RUNBOOK.md  demo_source_dump.sql  env.example  (+3 more)
(+217 files in other folders)
